Add support for Update Mapping
For example, let say you already have an index with the following settings and mapping:

```json
{
  "settings": {
    "number_of_shards": 3,
    "number_of_replicas": 0
  },
  "mappings": {
    "properties": {
      "message": { "type": "text" },
      "foo": { "type": "text" }
    }
  }
}
```

You can provide a file named `_update_settings.json` to update your index settings
and a file named `_update_mapping.json` if you want to update an existing mapping.
Note that Elasticsearch do not allow updating all settings and mappings.

You can for example add a new field, or change the `search_analyzer` for a given field but you can not modify
the field `type`.

Considering the previous example we saw, you can create a `elasticsearch/twitter/_update_settings.json` to update the
number of replicas:

```json
{
    "number_of_replicas" : 1
}
```

And you can create `elasticsearch/twitter/_update_mapping.json`:

```json
{
  "properties": {
    "message" : {"type" : "text", "search_analyzer": "keyword" },
    "bar" : { "type" : "text" }
  }
}
```

This will change the `search_analyzer` for the `message` field and will add a new field named `bar`.
All other existing fields (like `foo` in the previous example) won't be changed.

Closes #92.